test/files/neg/t0816.check
<<<<<<< HEAD
t0816.scala:5: error: case class `class Ctest' has case ancestor `class Btest'. Case-to-case inheritance is prohibited. To overcome this limitation use extractors to pattern match on non-leaf nodes.
=======
t0816.scala:5: error: case class Ctest has case ancestor Btest, but case-to-case inheritance is prohibited. To overcome this limitation, use extractors to pattern match on non-leaf nodes.
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
case class Ctest(override val data: String) extends Btest(data, true)
           ^
one error found
